
  * setLastModified() check fails on Windows, resolves issue #38.
    (andreastt)

  * Fix for NullPointerException in DesiredCapabilitiesTest.
    (andreastt)

  * Fix for SpartanRunner not exiting, resolves SPARTAN-1026.
    (danielb)

  * Escape quotes in JavaScript parameters.  (rjatkins)

  * Added OperaProfile.toJson(), avoids StackOverflowException in
    BeantoJsonConverter.  (dawagner)

  [TESTS]

  * Converted ignored mouse tests to a low-level OperaMouse test,
    MouseTest.  (andreastt)

  * Added stale element exception tests for navigating between same
    page and two different pages.  (andreastt)

  * Added window switching tests.  (andreastt)

  * Tests for WebElements being proxied in PageFactory.  (rjatkins)

  * Check for whether @Ignore annotation is empty, fixes a few failing
    Windows tests.  (andreastt)

  * Removed or refactored tests relying on external resources.
    (andreastt)

  [OTHER]

  * Fix code quotes in README.  (stuk)

  * Upgraded Guava to 11.0.1.  (ajayk)

  * Added more IntelliJ run configurations.  (andreastt)

  * Added Richard Atkins to the AUTHORS file.  (andreastt)


v0.9      (2011-01-16)

  [API CHANGES]

  * Removed deprecated interface OperaDriverSettings.  (andreastt)

  * Removed deprecated method OperaWebElement.hover().  (andreastt)

  * Removed methods OperaWebElement.mouseOver(), mouseOut(),
    mouseDown() and mosueUp().  (andreastt)

  * Removed deprecated methods OperaWebElement.getValue() and
    isVisible().  (andreastt)

  * Removed unknown, unused method OperaWebElement.getElementName().
    (andreastt)

  * Removed method OperaWebElement.rightClick().  (andreastt)

  * Removed deprecated methods OperaWebElement.dragAndDropBy() and
    dragAndDropOn().  (andreastt)

  * Removed deprecated method OperaDriver.getRunner().  (andreastt)

  * OperaDriver's constructor now also takes OperaProfile as an
    argument. (andreastt)

  * OperaRunnerSettings.setProfile() now accepts an OperaProfile